[package]
name = "blockchain_PoW_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
bincode = "1.3.3"
hex = "0.4.3"
k256 = "0.13.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ripemd = "0.1.3"
rocksdb = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
